# axum-htmx

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  package.json  pnpm-lock.yaml  todos.db  todos.db-shm  todos.db-wal
.direnv/: flake-profile-1-link
assets/: main.css
migrations/: 20230906224649_todos.sql
src/: main.rs  templates.rs
src/model/: error.rs  mod.rs  tasks.rs
src/model/store/: error.rs  mod.rs
src/routes/: api.rs  mod.rs  root.rs
templates/: about.html  base.html  hello.html  todo-form.html  todo-list.html
