[package]
name = "axum-htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
askama = "0.12.0"
axum = "0.6.20"
serde_json = "1"
serde_with = "3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls", "sqlite", "macros" ] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
